--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==1.11.5
+django-bootstrap3==9.0.0
 django-braces==1.11.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.0.8
