Add stripe library

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ requests-oauthlib==0.8.0
 six==1.11.0
 social-auth-app-django==1.2.0
 social-auth-core==1.4.0
+stripe==1.66.0
 urllib3==1.22
 whitenoise==3.3.1
